@@ -1,3 +1,5 @@
+* Move Prototype unit test adapter into its own file. [jddalton]
+
 * Cleanup jQuery adapters and ensure compiled variable `j` is the index of the current element being processed. [jddalton]
 
 * Ensure querySelectorAll() is skipped on non-html documents. [jddalton]
